--- a/src/output.css
+++ b/src/output.css
@@ -614,10 +614,6 @@ video {
   left: 0.5rem;
 }
 
-.left-32{
-  left: 8rem;
-}
-
 .left-6{
   left: 1.5rem;
 }
@@ -636,10 +632,6 @@ video {
 
 .right-6{
   right: 1.5rem;
-}
-
-.right-8{
-  right: 2rem;
 }
 
 .right-\[21\.5px\]{
@@ -678,10 +670,6 @@ video {
   top: 120px;
 }
 
-.top-\[22px\]{
-  top: 22px;
-}
-
 .top-full{
   top: 100%;
 }
@@ -705,11 +693,6 @@ video {
 .mx-1{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
-}
-
-.mx-4{
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
 
 .mx-\[40px\]{
@@ -774,8 +757,8 @@ video {
   margin-left: 10rem;
 }
 
-.ml-\[100px\]{
-  margin-left: 100px;
+.ml-\[55px\]{
+  margin-left: 55px;
 }
 
 .ml-auto{
@@ -792,10 +775,6 @@ video {
 
 .mr-5{
   margin-right: 1.25rem;
-}
-
-.mr-6{
-  margin-right: 1.5rem;
 }
 
 .mt-2{
@@ -975,10 +954,6 @@ video {
   width: 60px;
 }
 
-.w-\[80px\]{
-  width: 80px;
-}
-
 .w-\[90\%\]{
   width: 90%;
 }
@@ -1138,11 +1113,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-l-full{
-  border-top-left-radius: 9999px;
-  border-bottom-left-radius: 9999px;
-}
-
 .rounded-r-full{
   border-top-right-radius: 9999px;
   border-bottom-right-radius: 9999px;
@@ -1184,10 +1154,6 @@ video {
   border-right-width: 1px;
 }
 
-.border-t{
-  border-top-width: 1px;
-}
-
 .border-none{
   border-style: none;
 }
@@ -1215,11 +1181,6 @@ video {
 .border-green-500{
   --tw-border-opacity: 1;
   border-color: rgb(34 197 94 / var(--tw-border-opacity));
-}
-
-.border-orange-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(251 146 60 / var(--tw-border-opacity));
 }
 
 .border-purple-400{
@@ -1252,19 +1213,14 @@ video {
   border-color: rgb(7 89 133 / var(--tw-border-opacity));
 }
 
-.border-yellow-300{
+.border-rose-400{
   --tw-border-opacity: 1;
-  border-color: rgb(253 224 71 / var(--tw-border-opacity));
+  border-color: rgb(251 113 133 / var(--tw-border-opacity));
 }
 
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
@@ -1292,19 +1248,9 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
-.bg-green-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
 .bg-green-400{
   --tw-bg-opacity: 1;
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-
-.bg-orange-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
 .bg-purple-400{
@@ -1320,11 +1266,6 @@ video {
 .bg-red-400{
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-rose-500{
@@ -1345,11 +1286,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-40{
@@ -1460,11 +1396,6 @@ video {
 .py-\[2px\]{
   padding-top: 2px;
   padding-bottom: 2px;
-}
-
-.py-\[7px\]{
-  padding-top: 7px;
-  padding-bottom: 7px;
 }
 
 .pb-10{
@@ -1669,11 +1600,6 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-yellow-300{
-  --tw-text-opacity: 1;
-  color: rgb(253 224 71 / var(--tw-text-opacity));
 }
 
 .opacity-0{
@@ -2782,10 +2708,6 @@ button.rbc-input::-moz-focus-inner {
   pointer-events: none;
 }
 
-.css-dev-only-do-not-override-amq5gd {
-  border: none !important;
-}
-
 .hover\:bg-blue-50:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(239 246 255 / var(--tw-bg-opacity));
@@ -2849,29 +2771,14 @@ button.rbc-input::-moz-focus-inner {
   border-width: 0px;
 }
 
-.active\:bg-blue-400:active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
 .active\:bg-green-200:active{
   --tw-bg-opacity: 1;
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
 }
 
-.active\:bg-green-300:active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
 .active\:bg-green-400:active{
   --tw-bg-opacity: 1;
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-
-.active\:bg-orange-300:active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
 .active\:bg-purple-500:active{
@@ -2894,19 +2801,9 @@ button.rbc-input::-moz-focus-inner {
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
-.active\:bg-red-400:active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
 .active\:bg-rose-500:active{
   --tw-bg-opacity: 1;
   background-color: rgb(244 63 94 / var(--tw-bg-opacity));
-}
-
-.active\:bg-yellow-200:active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 
 .active\:text-white:active{
