--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-* { font-family: 'Nunito', sans-serif;}
+* {
+    font-family: 'Nunito', sans-serif;
+
+}
 
 .roboto { font-family: 'Roboto', sans-serif;}
 
@@ -433,12 +437,13 @@ button.rbc-input::-moz-focus-inner {
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    flex-direction: column;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: start;
     margin-bottom: 10px;
     font-size: 16px;
 }
@@ -455,14 +460,16 @@ button.rbc-input::-moz-focus-inner {
     color: #373a3c;
     display: inline-block;
     margin: 0;
+    font-size:12px;
+    font-weight: bold;
     text-align: center;
     color: #a855f7;
     vertical-align: middle;
     background: none;
     background-image: none;
-    border: 2px solid #a855f7;
+    border: 1px solid #a855f7;
     padding: 4px 8px;
-    border-radius: 50px;
+    border-radius: 10px;
     line-height: normal;
     white-space: nowrap;
     border-left: 0px;
@@ -499,6 +506,7 @@ button.rbc-input::-moz-focus-inner {
 .rbc-btn-group {
     display: inline-block;
     white-space: nowrap;
+    margin-bottom:8px;
 }
 
 .rbc-btn-group>button:first-child:not(:last-child) {
@@ -513,13 +521,13 @@ button.rbc-input::-moz-focus-inner {
 }
 
 .rbc-rtl .rbc-btn-group>button:first-child:not(:last-child) {
-    border-radius: 50px;
+    border-radius: 5px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
 
 .rbc-rtl .rbc-btn-group>button:last-child:not(:first-child) {
-    border-radius: 50px;
+    border-radius: 5px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
@@ -539,7 +547,7 @@ button.rbc-input::-moz-focus-inner {
 
 .rbc-btn-group+.rbc-btn-group,
 .rbc-btn-group+button {
-    margin-left: 10px;
+    margin-left: 0px;
 }
 
 .rbc-event,
@@ -1182,4 +1190,6 @@ button.rbc-input::-moz-focus-inner {
 .css-dev-only-do-not-override-amq5gd {
     border: none !important;
 }
+
+
 /*# sourceMappingURL=react-big-calendar.css.map */
